--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@progress/kendo-licensing": "^1.7.2",
+    "@progress/kendo-react-buttons": "^13.1.0",
+    "@progress/kendo-react-common": "^13.1.0",
+    "@progress/kendo-react-inputs": "^13.1.0",
+    "@progress/kendo-react-layout": "^13.1.0",
+    "@progress/kendo-svg-icons": "^4.5.0",
+    "@progress/kendo-theme-default": "^12.2.3",
+    "@types/styled-components": "^5.1.36",
     "googleapis": "^166.0.0",
     "next": "15.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "sass": "^1.94.1",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
